--- a/assets/sass/components/_color-variables.scss
+++ b/assets/sass/components/_color-variables.scss
@@ -20,7 +20,7 @@ $paleta: (
   "branco":   #fafafa,
   "vermelho": #e40c2b,
   "preto":    #1d1d2c,
-  "cinza":    #c5c5c5
+  "cinza":    #808080
 );
 
 $red: (
