--- a/assets/sass/aluno/_banner.scss
+++ b/assets/sass/aluno/_banner.scss
@@ -86,6 +86,12 @@
     background-image: -webkit-gradient(linear, left top, right bottom, from(rgba($primary-color-light, 0.6)), to(rgba($primary-color-dark, 0.6))), url(../img/entrar/redefinir.jpg);
     background-image: linear-gradient(to right bottom, rgba($primary-color-light, 0.6), rgba($primary-color-dark, 0.6)), url(../img/entrar/redefinir.jpg);
   }
+  
+  // FAQ
+  &--16 {
+    background-image: -webkit-gradient(linear, left top, right bottom, from(rgba($primary-color-light, 0.6)), to(rgba($primary-color-dark, 0.6))), url(../img/faq/fundo-faq.jpg);
+    background-image: linear-gradient(to right bottom, rgba($primary-color-light, 0.6), rgba($primary-color-dark, 0.6)), url(../img/faq/fundo-faq.jpg);
+  }
 
 
   min-height: 30rem;
