--- a/assets/sass/sobre/_sobre.scss
+++ b/assets/sass/sobre/_sobre.scss
@@ -37,6 +37,21 @@
   perspective: 100rem;
   margin-top: 2.5rem;
   
+  @media #{$extra-large-and-up} {
+    width: 90%;
+    margin: 3 rem auto 1rem auto;
+  }
+
+  @media #{$medium-only} {
+    width: 85%;
+    margin: 2rem auto 1rem auto;
+  }
+
+  @media #{$small-and-down} {
+    width: 80%;
+    margin: 2rem auto 1rem auto;
+  }
+
   &:after {
     content: "";
     display: block;
@@ -113,7 +128,7 @@
       display: inline-block;
       
       &:not(:last-child) {
-        padding-right: .5rem;
+        padding-right: 1rem;
       }
       
       & a {
@@ -122,7 +137,7 @@
         transition: color .2s;
         
         &:hover {
-          color: black;
+          color: rgba($branco, .6);
         }
         
       }
