--- a/assets/sass/entrar/_entrar.scss
+++ b/assets/sass/entrar/_entrar.scss
@@ -14,7 +14,7 @@
   &__imagem {
     -webkit-clip-path: polygon(0 0, 100% 0, 75% 100%, 0% 100%);
     clip-path: polygon(0 0, 100% 0, 75% 100%, 0% 100%);
-    background: linear-gradient(135deg, rgba($primary-color-light, 0.5), rgba($primary-color-dark, 0.5)), url("../img/entrar/fundo.png");
+    background: linear-gradient(135deg, rgba($primary-color-light, 0.5), rgba($primary-color-dark, 0.5)), url("../img/entrar/fundo.jpg");
     background-position: left;
     background-size: cover;
     height: 100%;
