--- a/assets/sass/aluno/_cardapio.scss
+++ b/assets/sass/aluno/_cardapio.scss
@@ -165,20 +165,20 @@
     border-top-left-radius: .3rem;
     border-top-right-radius: .3rem;
     &--1 {
-      background-image: -webkit-gradient(linear, left top, right bottom, from(rgba($primary-color-light, 0.5)), to(rgba($primary-color-dark, 0.5))), url(../img/aluno/cartoes/cartao-1.png);
-      background-image: linear-gradient(to right bottom, rgba($primary-color-light, 0.5), rgba($primary-color-dark, 0.5)), url(../img/aluno/cartoes/cartao-1.png);
+      background-image: -webkit-gradient(linear, left top, right bottom, from(rgba($primary-color-light, 0.5)), to(rgba($primary-color-dark, 0.5))), url(../img/aluno/cartoes/cartao.jpg);
+      background-image: linear-gradient(to right bottom, rgba($primary-color-light, 0.5), rgba($primary-color-dark, 0.5)), url(../img/aluno/cartoes/cartao.jpg);
     }
     &--2 {
-      background-image: -webkit-gradient(linear, left top, right bottom, from(rgba($secondary-color-light, 0.5)), to(rgba($secondary-color-dark, 0.5))), url(../img/aluno/cartoes/cartao-2.png);
-      background-image: linear-gradient(to right bottom, rgba($secondary-color-light, 0.5), rgba($secondary-color-dark, 0.5)), url(../img/aluno/cartoes/cartao-2.png);
+      background-image: -webkit-gradient(linear, left top, right bottom, from(rgba($secondary-color-light, 0.5)), to(rgba($secondary-color-dark, 0.5))), url(../img/aluno/cartoes/cartao.jpg);
+      background-image: linear-gradient(to right bottom, rgba($secondary-color-light, 0.5), rgba($secondary-color-dark, 0.5)), url(../img/aluno/cartoes/cartao.jpg);
     }
     &--3 {
-      background-image: -webkit-gradient(linear, left top, right bottom, from(rgba($tertiary-color-light, 0.5)), to(rgba($tertiary-color-dark, 0.5))), url(../img/aluno/cartoes/cartao-3.png);
-      background-image: linear-gradient(to right bottom, rgba($tertiary-color-light, 0.5), rgba($tertiary-color-dark, 0.5)), url(../img/aluno/cartoes/cartao-3.png);
+      background-image: -webkit-gradient(linear, left top, right bottom, from(rgba($tertiary-color-light, 0.5)), to(rgba($tertiary-color-dark, 0.5))), url(../img/aluno/cartoes/cartao.jpg);
+      background-image: linear-gradient(to right bottom, rgba($tertiary-color-light, 0.5), rgba($tertiary-color-dark, 0.5)), url(../img/aluno/cartoes/cartao.jpg);
     }
     &--4 {
-      background-image: -webkit-gradient(linear, left top, right bottom, from(rgba($quaternary-color-light, 0.5)), to(rgba($quaternary-color-dark, 0.5))), url(../img/aluno/cartoes/cartao-4.png);
-      background-image: linear-gradient(to right bottom, rgba($quaternary-color-light, 0.5), rgba($quaternary-color-dark, 0.5)), url(../img/aluno/cartoes/cartao-4.png);
+      background-image: -webkit-gradient(linear, left top, right bottom, from(rgba($quaternary-color-light, 0.5)), to(rgba($quaternary-color-dark, 0.5))), url(../img/aluno/cartoes/cartao.jpg);
+      background-image: linear-gradient(to right bottom, rgba($quaternary-color-light, 0.5), rgba($quaternary-color-dark, 0.5)), url(../img/aluno/cartoes/cartao.jpg);
     }
   }
 
